// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KlachtenDetail > No subject or location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/klachten"
              >
                Klachten
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/klachten/klacht/36046"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Klacht
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Klacht
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Nummer van uw klacht
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              36046
            </dd>
            <dt
              class="_Datalist__title_240c86"
            >
              Wat is de klacht?
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Dear Amsterdam Municipality
            </dd>
          </dl>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`KlachtenDetail > Subject and location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/klachten"
              >
                Klachten
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/klachten/klacht/34994"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Boosterprik
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Boosterprik
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Nummer van uw klacht
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              34994
            </dd>
            <dt
              class="_Datalist__title_240c86"
            >
              Wat is de klacht?
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Een klacht.
            </dd>
            <dt
              class="_Datalist__title_240c86"
            >
              Wat is de locatie waar de klacht is ontstaan?
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              RAI
            </dd>
            <dt
              class="_Datalist__title_240c86"
            >
              Wat wilt u dat de gemeente gaat doen naar aanleiding van uw klacht?
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Boosterprik
            </dd>
          </dl>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`KlachtenDetail > Subject no location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/klachten"
              >
                Klachten
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/klachten/klacht/36049"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Test voor decentrale toewijzing
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Test voor decentrale toewijzing
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Nummer van uw klacht
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              36049
            </dd>
            <dt
              class="_Datalist__title_240c86"
            >
              Wat is de klacht?
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Dit is de omschrijving van de klacht
            </dd>
          </dl>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
